Restored to '840a9e5d08ad484e29853bc07b9b28eecd98cbb8'
Replit-Restored-To: 840a9e5d08ad484e29853bc07b9b28eecd98cbb8

--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Eva Pérez | Experta en Estrategia de Hospitalidad y Bienestar de Lujo | wellnessbyeperez.es</title>
-    <meta name="description" content="Eva Pérez, experta en estrategia de hospitalidad y bienestar de lujo. Asesoro a hoteles en la transformación de su área Wellness en motor de crecimiento estratégico." />
-    <meta name="keywords" content="Eva Pérez, wellness, spa, hospitalidad lujo, estrategia wellness, transformación wellness, optimización ingresos, spa manager, consultoría hotelera" />
-    <meta name="author" content="Eva Pérez" />
-    <meta property="og:title" content="Eva Pérez | Experta en Estrategia de Hospitalidad y Bienestar de Lujo" />
-    <meta property="og:description" content="Asesoro a hoteles en la transformación de su área Wellness en motor de crecimiento estratégico." />
-    <meta property="og:url" content="https://wellnessbyeperez.es" />
-    <meta property="og:type" content="website" />
-    <link rel="canonical" href="https://wellnessbyeperez.es" />
+    <title>Eva Pérez | Spa Manager & Wellness Consultant</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
